tests/snapshots/test_e2e__assembly_code@binary_ampersand.c.snap
---
source: tests/test_e2e.rs
expression: prettied_assembly_code
input_file: tests/test_programs/binary_ampersand.c
---
    .globl _main
_main:
    pushq %rbp
    movq %rsp, %rbp
    subq $-8, %rsp
    movl $1, %r11d
    cmpl $0, %r11d
    je Land_false0
    movl $1, %r11d
    cmpl $2, %r11d
    movl $0, -4(%rbp)
    setl -4(%rbp)
    cmpl $0, -4(%rbp)
    je Land_false0
    movl $1, -8(%rbp)
    jmp Land_end1
Land_false0:
    movl $0, -8(%rbp)
Land_end1:
    movl -8(%rbp), %eax
    movq %rbp, %rsp
    popq %rbp
    ret
