tests/snapshots/test_e2e__assembly_code@binary_diff.c.snap
---
source: tests/test_e2e.rs
expression: prettied_assembly_code
input_file: tests/test_programs/binary_diff.c
---
    .globl _main
_main:
    pushq %rbp
    movq %rsp, %rbp
    subq $-4, %rsp
    movl $2, -4(%rbp)
    subl $3, -4(%rbp)
    movl -4(%rbp), %eax
    movq %rbp, %rsp
    popq %rbp
    ret
