tests/snapshots/test_e2e__assembly_code@binary_modulo.c.snap
---
source: tests/test_e2e.rs
expression: prettied_assembly_code
input_file: tests/test_programs/binary_modulo.c
---
    .globl _main
_main:
    pushq %rbp
    movq %rsp, %rbp
    subq $-4, %rsp
    movl $3, %eax
    cdq
    movl $2, %r10d
    idivl %r10d
    movl %edx, -4(%rbp)
    movl -4(%rbp), %eax
    movq %rbp, %rsp
    popq %rbp
    ret
