tests/snapshots/test_e2e__assembly_code@binary_op_precedence.c.snap
---
source: tests/test_e2e.rs
expression: prettied_assembly_code
input_file: tests/test_programs/binary_op_precedence.c
---
    .globl _main
_main:
    pushq %rbp
    movq %rsp, %rbp
    subq $-16, %rsp
    movl $4, %eax
    cdq
    movl $2, %r10d
    idivl %r10d
    movl %eax, -4(%rbp)
    movl $2, -8(%rbp)
    addl $1, -8(%rbp)
    movl $2, -12(%rbp)
    movl -12(%rbp), %r11d
    imull -8(%rbp), %r11d
    movl %r11d, -12(%rbp)
    movl -4(%rbp), %r10d
    movl %r10d, -16(%rbp)
    movl -12(%rbp), %r10d
    addl %r10d, -16(%rbp)
    movl -16(%rbp), %eax
    movq %rbp, %rsp
    popq %rbp
    ret
