tests/snapshots/test_e2e__assembly_code@integer_constant.c.snap
---
source: tests/test_e2e.rs
expression: assembly_code
input_file: tests/test_programs/integer_constant.c
---
Final(
    "\t.globl _main\n_main:\n\tpushq %rbp\n\tmovq %rsp, %rbp\n\tsubq $0, %rsp\n\tmovl $1, %eax\n\tmovq %rbp, %rsp\n\tpopq %rbp\n\tret\n\n",
)
